// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should render component 1`] = `
<Fragment>
  <span
    aria-label="Toggle menu"
    className="Toggle"
    onClick={[Function]}
  >
    <span
      className="ToggleIcon "
    />
  </span>
  <div
    className="Sidebar "
  >
    <h1
      className="Logo"
    >
      <Link
        className="LogoLink"
        to="/"
      >
        Podcast
      </Link>
    </h1>
    <nav
      className="Nav"
    >
      <h4
        className="Title"
      >
        PODCAST
      </h4>
      <ul>
        <li
          className="ListItem"
        >
          <NavLink
            activeClassName="ActiveLink"
            className="Link"
            exact={true}
            to="/"
          >
            <ForwardRef(SvgHome)
              className="LinkIcon"
            />
            Home
          </NavLink>
        </li>
        <li
          className="ListItem"
        >
          <NavLink
            activeClassName="ActiveLink"
            className="Link"
            to="/discover"
          >
            <ForwardRef(SvgSearch)
              className="LinkIcon"
            />
            Discover
          </NavLink>
        </li>
        <li
          className="ListItem"
        >
          <NavLink
            activeClassName=""
            className="Link"
            to="/podcast/undefined"
          >
            <ForwardRef(SvgPodcast)
              className="LinkIcon"
            />
            Now Playing
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</Fragment>
`;

exports[`Sidebar should render component when playing podcast 1`] = `
<Fragment>
  <span
    aria-label="Toggle menu"
    className="Toggle"
    onClick={[Function]}
  >
    <span
      className="ToggleIcon "
    />
  </span>
  <div
    className="Sidebar "
  >
    <h1
      className="Logo"
    >
      <Link
        className="LogoLink"
        to="/"
      >
        Podcast
      </Link>
    </h1>
    <nav
      className="Nav"
    >
      <h4
        className="Title"
      >
        PODCAST
      </h4>
      <ul>
        <li
          className="ListItem"
        >
          <NavLink
            activeClassName="ActiveLink"
            className="Link"
            exact={true}
            to="/"
          >
            <ForwardRef(SvgHome)
              className="LinkIcon"
            />
            Home
          </NavLink>
        </li>
        <li
          className="ListItem"
        >
          <NavLink
            activeClassName="ActiveLink"
            className="Link"
            to="/discover"
          >
            <ForwardRef(SvgSearch)
              className="LinkIcon"
            />
            Discover
          </NavLink>
        </li>
        <li
          className="ListItem"
        >
          <NavLink
            activeClassName="ActiveLink"
            className="Link"
            to="/podcast/1"
          >
            <ForwardRef(SvgPodcast)
              className="LinkIcon"
            />
            Now Playing
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</Fragment>
`;

exports[`Sidebar should render component when sidebar is visible 1`] = `
<Fragment>
  <span
    aria-label="Toggle menu"
    className="Toggle"
    onClick={[Function]}
  >
    <span
      className="ToggleIcon ToggleIconWhenVisible"
    />
  </span>
  <div
    className="Sidebar SidebarMobileVisible"
  >
    <h1
      className="Logo"
    >
      <Link
        className="LogoLink"
        to="/"
      >
        Podcast
      </Link>
    </h1>
    <nav
      className="Nav"
    >
      <h4
        className="Title"
      >
        PODCAST
      </h4>
      <ul>
        <li
          className="ListItem"
        >
          <NavLink
            activeClassName="ActiveLink"
            className="Link"
            exact={true}
            to="/"
          >
            <ForwardRef(SvgHome)
              className="LinkIcon"
            />
            Home
          </NavLink>
        </li>
        <li
          className="ListItem"
        >
          <NavLink
            activeClassName="ActiveLink"
            className="Link"
            to="/discover"
          >
            <ForwardRef(SvgSearch)
              className="LinkIcon"
            />
            Discover
          </NavLink>
        </li>
        <li
          className="ListItem"
        >
          <NavLink
            activeClassName=""
            className="Link"
            to="/podcast/undefined"
          >
            <ForwardRef(SvgPodcast)
              className="LinkIcon"
            />
            Now Playing
          </NavLink>
        </li>
      </ul>
    </nav>
  </div>
</Fragment>
`;
